updated for release