@@ -9,16 +9,28 @@ A tile based on `jib-maven-plugin` to build the docker image.
 ...
 
 <properties>
-  <!-- default -->
-  <docker.registry>docker.io</docker.registry>
-  <docker.image.from>openjdk:11.0.4-jre-slim</docker.image.from>
-  <docker.image.name>${docker.registry}/${project.artifactId}</docker.image.name>
-  <docker.image.tag>${project.version}</docker.image.tag>
-  <docker.image.tag2>latest</docker.image.tag2>
-  <docker.image.port>8080</docker.image.port>
-  <docker.auth.username>changeme</docker.auth.username>
-  <docker.auth.password>changeme</docker.auth.password>
-  <app.arguments>-DdevMode=false</app.arguments>
+    <!-- project settings -->
+    <docker.baseImage>openjdk:11-jre-slim-stretch</docker.baseImage>
+    <docker.registry>docker.io</docker.registry>
+    <docker.imageName>${project.artifactId}</docker.imageName>
+    <docker.fullName>${docker.registry}/${docker.imageName}</docker.fullName>
+    <docker.releaseTag>${project.version}</docker.releaseTag>
+    <docker.latestTag>latest</docker.latestTag>
+    <docker.port>8080</docker.port>
+    <docker.argument1>-Dspring.devtools.add-properties=false</docker.argument1>
+    <docker.argument2>-Dspring.jmx.enabled=false</docker.argument2>
+    <docker.argument3>-DdevMode=false</docker.argument3>
+    <docker.argument4>-Denv=PROD</docker.argument4>
+    <docker.jvmFlag1>-noverify</docker.jvmFlag1>
+    <docker.jvmFlag2>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</docker.jvmFlag2>
+    <docker.jvmFlag3>--add-opens=java.base/java.nio=ALL-UNNAMED</docker.jvmFlag3>
+
+    <docker.auth.username>changeme</docker.auth.username>
+    <docker.auth.password>changeme</docker.auth.password>
+
+    <!-- plugin version -->
+    <project.tiles.spring-boot-maven-plugin.version>2.2.6.RELEASE</project.tiles.spring-boot-maven-plugin.version>
+    <project.tiles.jib-maven-plugin.version>2.2.0</project.tiles.jib-maven-plugin.version>
 </properties>
 
 ...
@@ -28,12 +40,12 @@ A tile based on `jib-maven-plugin` to build the docker image.
     <plugin>
       <groupId>io.repaint.maven</groupId>
       <artifactId>tiles-maven-plugin</artifactId>
-      <version>2.15</version>
+      <version>2.16</version>
       <extensions>true</extensions>
         <configuration>
           <filtering>false</filtering>
           <tiles>
-            <tile>io.osnz.tiles:tile-docker-jib:[1,2)</tile>
+            <tile>io.osnz.tiles:tile-jib-docker-spring-boot:[1,2)</tile>
           </tiles>
         </configuration>
     </plugin>
